syntax = "proto3";

service BattleShipService {
    rpc StartGame (StartGameRequest) returns (StartGameResponse);
    rpc Attack (AttackRequest) returns (AttackResultGrpc);
}

message StartGameRequest {
    int32 difficulty = 1;
}

message StartGameResponse {
    string game_id = 1;
    repeated ShipGrpc ships = 2;
    int32 grid_size = 3;
}

message AttackRequest {
    string game_id = 1;
    int32 row = 2;
    int32 col = 3;
}

message AttackResultGrpc {
    string player_attack_result = 1;
    CoordinatesGrpc coordinates = 2;
    string ia_attack_result = 3;
    string winner = 4;
}

message CoordinatesGrpc {
    int32 row = 1;
    int32 col = 2;
}

message ShipGrpc {
    string type = 1;
    int32 start_row = 2;
    int32 start_col = 3;
    int32 size = 4;
    bool is_horizontal = 5;
}