syntax = "proto3";

service BattleShipService {
    rpc StartGame (StartGameRequestGrpc) returns (StartGameResponseGrpc);
    rpc Attack (AttackRequestGrpc) returns (AttackResultGrpc);
}

message StartGameRequestGrpc {
    int32 difficulty = 1;
    string username = 2;
}

message StartGameResponseGrpc {
    string game_id = 1;
    repeated ShipGrpc ships = 2;
    int32 grid_size = 3;
}

message AttackRequestGrpc {
    string game_id = 1;
    int32 row = 2;
    int32 col = 3;
    string username = 4;
}

message AttackResultGrpc {
    string player_attack_result = 1;
    CoordinatesGrpc coordinates = 2;
    string ia_attack_result = 3;
    string winner = 4;
}

message CoordinatesGrpc {
    int32 row = 1;
    int32 col = 2;
}

message ShipGrpc {
    string type = 1;
    int32 start_row = 2;
    int32 start_col = 3;
    int32 current_size = 4;
    int32 size = 5;
    bool is_horizontal = 6;
}